# pgbam

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: pgbamConfig.cmake.in
include/pgbam/: bam_io.hpp  cli.hpp  error.hpp  fingerprint.hpp  gaf.hpp  gbwt_backend.hpp  options.hpp  sidecar.hpp  types.hpp
src/: annotate.cpp  cli.cpp  decode.cpp  fingerprint.cpp  gaf.cpp  gbwt_backend.cpp  main.cpp  sidecar.cpp  sort_gaf.cpp
tests/: test_main.cpp
